--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,8 @@
     <include layout="@layout/content_main" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/gap1"
-        android:layout_marginBottom="@dimen/gap1"
+        android:id="@+id/sheridan"
         android:text="@string/sheridan"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        style="@style/sheridan_label" />
 
 </android.support.design.widget.CoordinatorLayout>
