--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,11 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:background="@color/Green100"
+
     android:orientation="vertical"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
+
+    <TextView
+        android:id="@+id/static_fragments_lebel"
+        android:text="@string/static_fragments"
+        style="@style/static_fragments_label" />
 
     <fragment
         android:id="@+id/fragment_input"
