--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -12,6 +12,11 @@
 
     tools:context=".InputFragment">
 
+    <TextView
+        android:id="@+id/input_fragment_label"
+        android:text="@string/input_fragment"
+        style="@style/fragment_label" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
