--- a/app/src/main/res/layout/fragment_output.xml
+++ b/app/src/main/res/layout/fragment_output.xml
@@ -12,6 +12,11 @@
 
     tools:context=".OutputFragment">
 
+    <TextView
+        android:id="@+id/output_fragment_label"
+        android:text="@string/output_fragment_label"
+        style="@style/fragment_label" />
+
     <Space
         android:layout_width="wrap_content"
         android:layout_height="0dp"
