--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="Yellow200">#FFF59D</color>
     <color name="Teal50">#E0F2F1</color>
+    <color name="Green100">#C8E6C9</color>
+    <color name="Orange500">#E65100</color>
 </resources>
